<resources>
    <string name="app_name">Promptr</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="back">back</string>
    <string name="menu">menu</string>
    <string name="tool">tool</string>
    <string name="transition_script_edit_dialog">Script Dialog</string>
    <string name="title_hint">Title</string>
    <string name="choose_a_background_color">Choose a background color:</string>
    <string name="dialog_ok">OK</string>
    <string name="hint_note">Note</string>
    <string name="last_modification_date">Last modification date</string>
    <string name="script_actions">Script actions</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <!---Pref-->
    <string name="mirror_text_key" translatable="false">mirror_text_key</string>
    <string name="font_size_key" translatable="false">font_size_key</string>
    <string name="speed_key" translatable="false">speed_key</string>
    <string name="mirror_summary_on">Mirrored</string>
    <string name="mirror_summary_off">Not mirrored</string>
    <string name="mirror_text">Mirrored Text</string>
    <string name="font_size_title">Font Size</string>
    <string name="font_size_small">Small</string>
    <string name="font_size_medium">Medium</string>
    <string name="font_size_large">Large</string>
    <string name="font_size_xlarge">Extra Large</string>
    <string name="font_size_small_values">0</string>
    <string name="font_size_medium_values">1</string>
    <string name="font_size_large_values">2</string>
    <string name="font_size_xlarge_values">3</string>
    <string name="speed_label_1">1</string>
    <string name="speed_label_2">2</string>
    <string name="speed_label_3">3</string>
    <string name="speed_label_4">4</string>
    <string name="speed_label_5">5</string>
    <string name="speed_label_values_1">1</string>
    <string name="speed_label_values_2">2</string>
    <string name="speed_label_values_3">3</string>
    <string name="speed_label_values_4">4</string>
    <string name="speed_label_values_5">5</string>
    <string name="speed_title">Scroll Speed</string>
    <string name="color_theme">color_theme</string>
    <string name="play_button">play_button</string>
    <string name="edit_script">edit_script</string>
    <string name="countdown_number">5</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="appwidget_text">Script name</string>
    <string name="add_widget">Add widget</string>
    <string name="granted">Granted</string>
    <string name="not_granted">Not granted</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="settings">Settings</string>
    <string name="restore_data">Restore data</string>
    <string name="backup_data">Backup data</string>
    <string name="add_new_script">Add New Script</string>
    <string name="scripts">scripts</string>
</resources>
