<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_toolbar"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    tools:showIn="@layout/fragment_edit_script">


    <ImageButton
        android:id="@+id/script_play_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?android:attr/selectableItemBackground"
        app:srcCompat="@drawable/ic_play_arrow"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/play_button"/>

    <ImageButton
        android:id="@+id/record_script_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="64dp"
        android:background="?android:attr/selectableItemBackground"
        app:srcCompat="@drawable/ic_recording"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="64dp"
        android:contentDescription="@string/record"/>

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/script_speed_seekbar"
        android:layout_width="193dp"
        android:max="4"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="124dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="124dp" />

    <ImageButton
        android:id="@+id/settings_script_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        android:background="?android:attr/selectableItemBackground"
        app:srcCompat="@drawable/ic_settings"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/edit_script"/>

</RelativeLayout>

