<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="dismiss"
    tools:context=".ui.activities.ScriptEditorDialog">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginStart="@dimen/spacing_large"
        android:background="@drawable/dialog_background"
        android:clickable="true"
        android:elevation="6dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_normal"
        android:paddingEnd="@dimen/padding_dialog"
        android:paddingStart="@dimen/padding_normal"
        android:paddingTop="@dimen/padding_dialog"
        android:transitionName="@string/transition_script_edit_dialog"
        android:paddingRight="@dimen/padding_dialog"
        android:paddingLeft="@dimen/padding_normal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_float_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/script_title_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint"
                android:inputType="textCapSentences"
                android:selectAllOnFocus="true"
                android:textColorHint="@color/immersive_bars"
                android:textSize="@dimen/medium_text" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <!-- Redesign the button-->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/edit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/dialog_ok" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>